--- a/src/course/Course.module.css
+++ b/src/course/Course.module.css
@@ -1,3 +1,35 @@
+.enrollButtonDiv {
+  display: flex;
+  /* align-items: end; */
+  justify-content: end;
+  position: sticky;
+  top: 0;
+  background-color: #d9d9d9;
+}
+
+.enrollButton {
+  border: none;
+  padding: 0.5rem 3rem;
+  background-color: #d9d9d9;
+  margin: 1rem 3rem;
+
+  right: 0;
+  padding-bottom: 0.1rem;
+  padding-left: 0.1rem;
+  cursor: pointer;
+  font-weight: 800;
+  color: rgb(0, 0, 249);
+}
+.enrollButton:hover {
+  color: black;
+}
+
+.enrollButtonDiv p,
+.enrollButton {
+  font-size: 1.2rem;
+  margin-left: 0;
+  padding-top: 1rem;
+}
 .main_course_content {
   margin: 3rem 1.4rem;
   margin: 3rem 3rem;
